<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="siva">SIVA</string>
    <string name="algorithm">ALGORITHM</string>
  
   	<string name="main_activity">mainActivity</string> 
   	
   	<!-- Setvice -->
   	<string name="serivce">서비스</string>	
   	
   
   	<!-- Event -->
    <string name="event">이벤트</string>
    <string name="event_start_date">이벤트 시작 날짜</string>
    <string name="event_end_date">이벤트 종료 날짜</string>
    <string name="event_start_time">이벤트 시작 시간</string>
    <string name="event_end_time">이벤트 종료 시간</string>
    <string name="event_registration">이벤트 등록</string>
    
    <string name="tool">도구</string>
    
    <string name="map">지도</string>
    <string name="date">날짜</string>
    <string name="call">전화하기</string>
    <string name="share">공유</string>
    
    <string name="registration_by_email">이메일로 가입</string>

    <string name="app_name">Arlimi</string>
    <string name="action_setting">설정</string>
    <string name="hello_world">Hello world!</string>
    <string name="sharedPreference">SharedPreference</string>
    <string name="key_updates_on">KEY_UPDATES_ON</string>
    <string name="search">검색</string>
    
    <string name="sort_by_time">시간순</string>
    <string name="sort_by_distance">거리순</string>
    <string name="sort_by_category">업종순</string>
    
    <string name="account">계정</string>
    
    <string name="facebook_app_id">469231553178214</string>
    <string name="login_with_facebook">페이스북으로 로그인</string>
    <string name="registration_with_facebook">페이스북으로 가입</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="new_registration">가입하기</string>
    <string name="complete_registration">가입완료</string>
    
    <string name="email">이메일 주소</string>
    <string name="password">비밀번호</string>
    <string name="name">이름</string>
    
    <!-- Dialog -->
    <string name="dialog_search_address_title">주소검색"</string>
    <string name="dialog_manual_address">주소직접입력</string>
    <string name="dialog_address_confirm">주소등록</string>
    <string name="dialog_confirm">확인</string>
    <string name="dialog_cancel">취소</string>
    <string name="dialog_notification">알림</string>
    <string name="dialog_registration">가입</string>
   
    <!-- Shop Registration -->
    <string name="shop_name">업체명</string>
    <string name="shop_address">주소</string>
    <string name="shop_zip">우편번호</string>
    <string name="shop_detail_address">상세주소</string>
    <string name="shop_phone_num">전화번호</string>
    <string name="find_address">현재위치로 주소검색</string>
    <string name="shop_find">찾기</string>
    <string name="shop_region">지역명</string>
    <string name="shop_dong">동/읍/면/리/가</string>
    <string name="shop_registration">업체등록</string>
    
    <!--  Acivity recognition -->
    <string name="in_vehicle">in_vehicle</string>
    <string name="on_bicyle">on_bicyle</string>
    <string name="on_foot">on_foot</string>
    <string name="still">still</string>
    <string name="activity_unknown">unknown</string>
    <string name="tilting">tilting</string>
    
    <!--  Overflow menu itmes -->
    <string name="first_item">first</string>
    
    <!-- Google API KEY -->
    <string name="google_api_key">AIzaSyBBCHiIdNptdELv7SjWb5rVWEpOsQWVUQw</string>
    
    <!-- Location -->
    <string name="reverse_geocoding_query">
        https://maps.googleapis.com/maps/api/geocode/json?latlng=</string>
    
    <!-- Nav Drawer Menu Items  -->
   
    <string-array name="drawer_list_serice_items">
        <item>내주변</item>
        <item>전체서비스</item>
        <item>방문한서비스</item>
    </string-array>
    
    <string-array name="drawer_list_tool">
        <item>설정</item>
        <item>의견 보내기</item>
       	<item>공유</item>
     </string-array>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <!-- Messages -->
    <string name="add_geofences_result_success">
        Add Geofences: Success GeofenceRequestIds=%1$s
    </string>
    <string name="add_geofences_result_failure">
        Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="add_geofences_already_requested_error">
        Can\'t add geofences, previous request hasn\'t finished.
    </string>
    <string name="connected">Client connected</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="geofence_input_error_missing">Missing value</string>
    <string name="geofence_input_error_latitude_invalid">
        Invalid latitude(s). Must be in the range -90 to 90 degrees
    </string>
    <string name="geofence_input_error_longitude_invalid">
        Invalid longitude(s). Must be in the range -180 to 180 degrees
    </string>
    <string name="geofence_input_error_radius_invalid">
        Invalid radius(s). Must be 1 meter or greater.
    </string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_error_detail">
        Geofence transition error, code %1$d message %2$s.
    </string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error. Invalid type %1$d in geofences %2$s
    </string>
    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>
    <string name="geofence_transition_notification_title">
        %1$s geofence(s) %2$s
    </string>
    <string name="geofence_transition_unknown">Unknown transition</string>
    <string name="invalid_action">Invalid action received. See error log for details.</string>
    <string name="invalid_action_detail">Invalid action %1$s received.</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="latitude_error_message">
        Latitude should be in the range -90 to 90 degrees
    </string>
    <string name="longitude_error_message">
        Longitude should be in the range -180 to 180 degrees
    </string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="play_services_available">Location Services is available</string>
    <string name="radius_error_message">Radius must be greater than or equal to 0</string>
    <string name="register_geofence">Register geofence</string>
    <string name="remove_geofences_id_failure">
        Removing geofences by request id failed: error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="remove_geofences_already_requested_error">
        Can\'t remove geofences, previous request hasn\'t finished.
    </string>
    <string name="remove_geofences_id_success">
        Removing geofences by request ids succeeded: request ids: %1$s
    </string>
    <string name="remove_geofences_intent_failure">
        Removing all geofences failed: error code %1$d
    </string>
    <string name="remove_geofences_intent_success">
        Removing all geofences succeeded.
    </string>
    <string name="transition_entered">entered</string>
    <string name="transition_exited">exited</string>
    <string name="transition_unknown">unknown</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    <string name="unregister_geofence">Remove geofences</string>
    <string name="unregister_geofence1">Remove geofence 1</string>
    <string name="unregister_geofence2">Remove geofence 2</string>

    <!-- Number patterns -->
    <string name="lat_lng_pattern">* ###.00000000;* -###.00000000</string>
    <string name="radius_pattern">* #.0000</string>
</resources>
