<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   
  <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:text= "@string/siva"
        android:layout_gravity="center"
        android:textSize="30sp"
        />
    
     
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text= "@string/algorithm"
        android:layout_gravity="center"
        android:textSize="30sp"
        />
    
     
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="알리미"
        android:paddingTop="12dp"
        android:textSize="30sp"
        android:layout_gravity="center"
        />
    
    <com.facebook.widget.LoginButton
       xmlns:fb="http://schemas.android.com/apk/res-auto" 
        android:id="@+id/facebook_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        fb:login_text="@string/login_with_facebook"
        fb:logout_text="@string/logout"
        />
    
    <EditText 
        android:id="@+id/login_email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        />
    
    <EditText 
        android:id="@+id/login_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_gravity="center"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >
        
        <Button 
            android:id="@+id/registration_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_registration"
            android:layout_weight="1.0"
            />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login" 
            android:layout_weight="1.0"
            />
        
    </LinearLayout>
    
    
</LinearLayout>
