<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >
    
    <com.facebook.widget.LoginButton
       xmlns:fb="http://schemas.android.com/apk/res-auto" 
        android:id="@+id/dialog_fragment_facebook_reg_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        fb:login_text="@string/registration_with_facebook"
        fb:logout_text="@string/logout"
        />
    
    <View
        style="@style/Divider"
        android:layout_marginTop="10dp"
        />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/registration_by_email"
        android:textSize="20sp"
         />
    
    <EditText 
        android:id="@+id/new_user_email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        />
    
    <EditText 
        android:id="@+id/new_user_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        />
    
    <EditText 
        android:id="@+id/new_user_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textPersonName"
        android:hint="@string/name"
        />
    
    <View
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        
        />
    
    <Button 
        android:id="@+id/new_user_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
       	android:layout_marginBottom="20dp" 
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/complete_registration"
        />
   
</LinearLayout>
