<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    >
    
    <TextView 
        android:id="@+id/event_sort_by_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_time"
        />
     
    <TextView 
        android:id="@+id/event_sort_by_distance_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_distance"
        />
    
     
    <TextView 
        android:id="@+id/event_sort_by_category_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_category"
        />

</LinearLayout>
