<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >
    
    <com.facebook.widget.LoginButton
       xmlns:fb="http://schemas.android.com/apk/res-auto" 
        android:id="@+id/facebook_reg_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        fb:login_text="@string/registration_with_facebook"
        />
    
    <View
        style="@style/Divider"
        android:layout_marginTop="10dp"
        />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/registration_by_email"
        android:textSize="20sp"
         />
    
    <EditText 
        android:id="@+id/new_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/email"
        />
    
    <EditText 
        android:id="@+id/new_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/password"
        />
   
</LinearLayout>
