<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText 
        android:id="@+id/shop_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:inputType="textPersonName"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp" 
       	android:layout_marginRight="30dp"
        android:hint="@string/shop_name"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
       <TextView 
          	android:layout_width="wrap_content"
          	android:layout_height="wrap_content"
          	android:text="@string/shop_region" 
           /> 

        <EditText
            android:id="@+id/shop_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:hint="@string/shop_address"
            android:inputType="textPostalAddress" />

        <Button
            android:id="@+id/shop_search_address_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/shop_find" />
</LinearLayout>
    
     
     <EditText 
        android:id="@+id/shop_detail_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textPostalAddress"
      	android:layout_marginLeft="30dp" 
       	android:layout_marginRight="30dp"
        android:hint="@string/shop_detail_address"
        />

     <!-- 
      <Button 
         android:id="@+id/shop_find_address_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="30dp"
         android:text="@string/find_address"
         />
    
      -->
    
     <!-- 
        <fragment
        android:id="@+id/map_search_address"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
       	android:layout_marginLeft="30dp" 
       	android:layout_marginRight="30dp"
        />
 
      -->
    
     <EditText 
        android:id="@+id/shop_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="text|phone"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp" 
       	android:layout_marginRight="30dp"
        android:hint="@string/shop_phone_num"
        />
     
     <View 
        style="@style/Divider" 
        android:layout_marginTop="20dp"
         />
     
     <Button 
         android:id="@+id/shop_registration_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="30dp" 
       	 android:layout_marginRight="30dp"
         android:text="@string/registration"
         />

</LinearLayout>
