<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    
    <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"    
     android:orientation="vertical"
     >
        
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        
        <Button
            android:id="@+id/search_menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="메뉴찾기"
            />
        
        <Button 
            android:id="@+id/past_menu_btn"
            android:layout_width="wrap_content"
           	android:layout_height="wrap_content" 
           	android:layout_marginLeft="10dp"
           	android:text="이전이벤트"
            />
    </LinearLayout>
    
    <EditText 
        android:id="@+id/edittext_event_contents"
        android:layout_width="match_parent"
        android:lines="30"
        android:layout_height="200px"
        android:hint="이벤트를 입력하세요"
        />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="10dp"
        android:text="EVENT"
        android:textSize="20sp"
        />
    
   
   	 <View 
        style="@style/Divider"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        />
       
    <TableRow 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="15dp"
        >
        
        <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/event_start_date"
        />
        
        <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/event_start_time"
            />
    </TableRow>
    
    <TableRow 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="15dp"
        >
        
            <Button 
                android:id="@+id/event_start_date_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="시작날짜 설정"
              />
            
            <Button 
                android:id="@+id/event_start_time_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="시작시간 설정"
                />
       
    </TableRow>
    
    <TableRow 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="15dp"
        >
            
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/event_end_date"
            />
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/event_end_time"
            />
    </TableRow>
    
    <TableRow 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="15dp"
        >
        
        <Button 
            android:id="@+id/event_end_date_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="종료날짜 설정"
            />
        
         <Button 
        android:id="@+id/event_end_time_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="종료시간 설정"
        />
    </TableRow>
 
    <View 
        style="@style/Divider"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        />
    
    <SeekBar 
        android:id="@+id/radius_seekbar"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:max="5"
        />
    
    <TextView 
        android:id="@+id/radius_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="1km"
        />
    
     <View 
        style="@style/Divider"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        />
   
    <Button 
        android:id="@+id/event_send_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="등록하기"
        />
    
    </LinearLayout>
    
</ScrollView>
